@startuml 03-композитный-ключ
!theme plain
title Шаг 3 — Композитный первичный ключ (связь многие-ко-многим)

skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam linetype ortho

entity users {
  *<b>id</b> : uuid <<PK>>
  --
  *email : text
  *name : text
}

entity workspaces {
  *<b>id</b> : uuid <<PK>>
  --
  *name : text
  *slug : text <<U>>
}

entity workspace_members {
  *<b>workspace_id</b> : uuid <<PK, FK>>
  *<b>user_id</b> : uuid <<PK, FK>>
  --
  *role : text
  *joined_at : timestamptz
}

workspaces ||--|{ workspace_members
users ||--o{ workspace_members

note top of workspace_members
  <b>Композитный первичный ключ</b> — составной,
  из <b>двух и более</b> полей. Здесь это пара
  <b>(workspace_id, user_id)</b>.

  Гарантирует: <b>одна пара — одна запись</b>.
  Пользователь не может быть членом одного workspace
  дважды (это было бы бессмысленно).

  У одного из полей пары может быть также
  роль FK — тут <b>оба</b> поля и PK, и FK.
end note

note right of workspaces
  <b>Связь "многие ко многим" (N:M)</b> —
  один пользователь может быть в нескольких workspace,
  один workspace содержит много пользователей.

  <b>N:M нельзя реализовать напрямую</b> двумя FK —
  поэтому создаётся <b>связующая таблица</b>
  (workspace_members), которая хранит пары.

  Слева от workspace_members на концах линий:
  <b>||--|{</b> = workspace ↔ members: "один и минимум один"
  <b>||--o{</b> = users ↔ members: "один и ноль-или-много"

  <b>Почему "1..*" со стороны workspace?</b> — потому что
  workspace без участников не существует, минимум
  есть owner, который его создал.
end note

note bottom of users
  <b>Почему "0..*" со стороны users?</b> —
  пользователь может быть <b>вне</b> любого workspace
  (только что зарегистрировался, никуда не пригласили).
end note

@enduml
